--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
+:root{
+    --light-bg-color: #FCFCFC;
+    --dark-bg-color: #242424;
+
+    --light-text-color: #464646;
+    --dark-text-color: #FFFFFF;
+
+    --light-primary-color: #FFFF00;
+    --dark-primary-color: #FF0000;
+
+    --light-secondary-color: #72D9E0;
+    --dark-secondary-color: #72D9E0;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -9,7 +26,78 @@ a {
     color: initial;
 }
 
-body{
-    width: 100vh;
-    height: 100vh;
+ul{
+    list-style: none;
 }
+
+body{
+    width: 100%;
+    height: 100vh;
+    background-color: var(--light-bg-color);
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+}
+
+nav{
+    display: flex;
+    padding: 1em 6em;
+    justify-content: space-between;
+}
+
+.logo{
+    position: relative;
+    font-size: 1.6rem;
+    cursor: pointer;
+}
+
+.logo > span:nth-child(1){
+    font-weight: 300;
+}
+
+.logo > span:nth-child(2){
+    font-weight: 500;
+}
+
+.logo::before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -100%;
+    display: block;
+    width: 7.3rem;
+    height: 2px;
+    background-color: var(--light-text-color);
+    cursor: auto;
+}
+
+.nav-links{
+    display: flex;
+    font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    align-items: center;
+}
+
+.nav-link{ 
+    padding: 0 2em;
+    position: relative;
+}
+
+.nav-link::before{
+    content: '';
+    display: block;
+    background-color: var(--light-primary-color);
+    width: 0%;
+    height: 30%;
+    position: absolute;
+    z-index: -1;
+    bottom: 5px;
+    transition: width .3s ease-in-out;
+}
+
+.nav-link:hover::before{
+    width: 55%;
+}
+
+.nav-link + .nav-link{ border-left: 1px solid rgba(0, 0, 0, 0.2); }
+
+.hamburger{ display: none; }
