--- a/style.css
+++ b/style.css
@@ -37,16 +37,22 @@ body{
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
+html {
+    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+}
+
 nav{
     display: flex;
     padding: 1em 3.5em;
     justify-content: space-between;
+    font-size: .7rem;
 }
 
 .logo{
     position: relative;
-    font-size: 1.6rem;
+    font-size: 1rem;
     cursor: pointer;
+    margin-left: 10px;
 }
 
 .logo > span:nth-child(1){
@@ -61,9 +67,9 @@ nav{
     content: '';
     position: absolute;
     top: 50%;
-    left: -50%;
+    left: -60%;
     display: block;
-    width: 4rem;
+    width: 2.8rem;
     height: 2px;
     background-color: var(--light-text-color);
     cursor: auto;
@@ -72,7 +78,6 @@ nav{
 .nav-links{
     display: flex;
     font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
-    font-size: 1.1rem;
     text-transform: uppercase;
     align-items: center;
 }
@@ -82,20 +87,33 @@ nav{
     position: relative;
 }
 
-.nav-link::before{
+.nav-link > a{
+    display: block;
+    width: 70px;
+    text-align: center;
+}
+
+.nav-link > a > span{
+    display: block;
+    text-align: left;
+    width: fit-content;
+    margin: auto;
+}
+
+.nav-link > a > span::before{
     content: '';
     display: block;
     background-color: var(--light-primary-color);
     width: 0%;
-    height: 30%;
+    height: 7px;
     position: absolute;
     z-index: -1;
     bottom: 5px;
     transition: width .3s ease-in-out;
 }
 
-.nav-link:hover::before{
-    width: 55%;
+.nav-link > a:hover > span::before{
+    width: 75px;
 }
 
 .nav-link + .nav-link{ border-left: 1px solid rgba(0, 0, 0, 0.2); }
