--- a/style.css
+++ b/style.css
@@ -30,11 +30,13 @@ ul{
     list-style: none;
 }
 
-body{
+html, body{
     width: 100%;
     height: 100vh;
     background-color: var(--light-bg-color);
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    position: relative;
+    overflow-x: hidden; 
 }
 
 html {
@@ -47,6 +49,7 @@ nav{
     justify-content: space-between;
     font-size: 1rem;
 }
+
 
 .logo{
     position: relative;
@@ -94,7 +97,6 @@ nav{
 
 .nav-link > a > span{
     display: block;
-    text-align: center;
     width: fit-content;
     margin: auto;
     position: relative;
@@ -134,5 +136,72 @@ nav{
 
 .nav-link + .nav-link{ border-left: 1px solid rgba(0, 0, 0, 0.2); }
 
-.hamburger{ display: none; }
+.hamburger{ 
+    display: none; 
+    z-index: 1;
+}
 
+@media only screen and (max-width: 768px) {
+    .hamburger{ 
+        display: block; 
+        align-self: center;
+    }
+
+    .nav-links{
+        flex-direction: column;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 200px;
+        height: 100%;
+        background-color: #72D9E0;
+        opacity: .9;    
+        transform: translateX(0%);
+    }
+
+    .nav-link > a > span::before, .nav-link > a > span::after{
+        display: none;
+    }
+
+    @keyframes menu-slide-in {
+        from{
+            transform: translateX(100%);
+        }
+        to{
+            transform: translateX(0%);
+        }
+    }
+
+    @keyframes menu-slide-out {
+        from{
+            transform: translateX(0%);
+        }
+        to{
+            transform: translateX(100%);
+        }
+    }
+
+    .nav-link + .nav-link{ border: none; }
+    .nav-link{ 
+        padding: 0;
+    }
+
+    .nav-link:first-child{
+        margin-top: 10em;
+    }
+
+    .nav-link > a{
+        width: 200px;
+        height: 50px;
+        display: flex;
+    }
+
+    .nav-link > a:active{
+        background-color: rgb(74, 194, 202);
+    }
+
+    .nav-link > a > span{
+        margin: auto;
+    }
+
+}
