--- a/style.css
+++ b/style.css
@@ -1,252 +1,270 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
-:root{
-    --light-bg-color: #FCFCFC;
-    --dark-bg-color: #242424;
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap");
+:root {
+  --light-bg-color: #fcfcfc;
+  --dark-bg-color: #242424;
 
-    --light-text-color: #464646;
-    --dark-text-color: #FFFFFF;
+  --light-text-color: #464646;
+  --dark-text-color: #ffffff;
 
-    --light-primary-color: #FFFF00;
-    --dark-primary-color: #FF0000;
+  --light-primary-color: #ffff00;
+  --dark-primary-color: #ff0000;
 
-    --light-secondary-color: #72D9E0;
-    /*--dark-secondary-color: #72D9E0;*/
+  --light-secondary-color: #72d9e0;
+  /*--dark-secondary-color: #72D9E0;*/
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
-    text-decoration: none;
-    color: initial;
+  text-decoration: none;
+  color: initial;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
 
-html, body{
-    width: 100%;
-    height: 100vh;
-    background-color: var(--light-bg-color);
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    position: relative;
-    overflow-x: hidden; 
+html,
+body {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--light-bg-color);
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
 
-nav{
-    display: flex;
-    padding: 1em 3.5em;
-    justify-content: space-between;
-    font-size: 1rem;
+nav {
+  display: flex;
+  padding: 1em 3.5em;
+  justify-content: space-between;
+  font-size: 1rem;
 }
 
-
-.logo{
-    position: relative;
-    font-size: 1.5rem;
-    cursor: pointer;
-    margin-left: 0.4em;
+.logo {
+  position: relative;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin-left: 0.4em;
 }
 
-.logo > span:nth-child(1){
-    font-weight: 300;
+.logo > span:nth-child(1) {
+  font-weight: 300;
 }
 
-.logo > span:nth-child(2){
-    font-weight: 500;
+.logo > span:nth-child(2) {
+  font-weight: 500;
 }
 
-.logo::before{
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: -55%;
-    display: block;
-    width: 3.5rem;
-    height: 2px;
-    background-color: var(--light-text-color);
-    cursor: auto;
+.logo::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -55%;
+  display: block;
+  width: 3.5rem;
+  height: 2px;
+  background-color: var(--light-text-color);
+  cursor: auto;
 }
 
-.nav-links{
-    display: flex;
-    font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-    align-items: center;
+.nav-links {
+  display: flex;
+  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  align-items: center;
 }
 
-.nav-link{ 
-    padding: 0 2.3em;
+.nav-link {
+  padding: 0 2.3em;
 }
 
-.nav-link > a{
-    display: block;
-    width: 4.4em;
-    text-align: center;
+.nav-link > a {
+  display: block;
+  width: 4.4em;
+  text-align: center;
 }
 
-.nav-link > a > span{
-    display: block;
-    width: fit-content;
-    margin: auto;
-    position: relative;
-    z-index: 1;
+.nav-link > a > span {
+  display: block;
+  width: fit-content;
+  margin: auto;
+  position: relative;
+  z-index: 1;
 }
 
-.nav-link > a > span::before{
-    content: '';
-    display: block;
-    background-color: var(--light-primary-color);
-    width: 0%;
-    height: 7px;
-    position: absolute;
-    z-index: -1;
-    top: 10px;
-    transition: width .5s ease-in-out;
+.nav-link > a > span::before {
+  content: "";
+  display: block;
+  background-color: var(--light-primary-color);
+  width: 0%;
+  height: 7px;
+  position: absolute;
+  z-index: -1;
+  top: 10px;
+  transition: width 0.5s ease-in-out;
 }
 
-.nav-link > a:hover > span::before{
-    width: 130%;
+.nav-link > a:hover > span::before {
+  width: 130%;
 }
 
-.nav-link > a > span::after{
-    content: '';
-    display: block;
-    background-color: var(--light-secondary-color);
-    width: 0%;
-    height: 7px;
-    position: absolute;
-    z-index: -2;
-    top: 10px;
-    transition: width .3s ease-in-out;
+.nav-link > a > span::after {
+  content: "";
+  display: block;
+  background-color: var(--light-secondary-color);
+  width: 0%;
+  height: 7px;
+  position: absolute;
+  z-index: -2;
+  top: 10px;
+  transition: width 0.3s ease-in-out;
 }
 
-.nav-link > a:hover > span::after{
-    width: 130%;
+.nav-link > a:hover > span::after {
+  width: 130%;
 }
 
-.nav-link + .nav-link{ border-left: 1px solid rgba(0, 0, 0, 0.2); }
+.nav-link + .nav-link {
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+}
 
-#hamburger{ 
-    display: none; 
-    z-index: 1;
-    
+#hamburger {
+  display: none;
+  z-index: 1;
 }
 
 @media only screen and (max-width: 768px) {
-    #hamburger{ 
-        display: flex; 
-        width: 30px;
-        height: 22px;
-        justify-content: space-between;
-        flex-direction: column;
-        align-self: center;
-    }
+  #hamburger {
+    display: flex;
+    width: 30px;
+    height: 22px;
+    justify-content: space-between;
+    flex-direction: column;
+    align-self: center;
+  }
 
-    #hamburger::before, #hamburger::after{
-        content: '';
-        display: block;
-        width: 30px;
-        height: 3px;
-        background-color: #242424;
-    }
+  #hamburger::before,
+  #hamburger::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: #242424;
+  }
 
-    
-    #hamburger > span {
-        display: block;
-        width: 30px;
-        height: 3px;
-        background-color: #242424;
-    }
 
-    @keyframes top-line {
-        from{
-            transform: rotate(0deg) translateY(0%);
-        }
-        to{
-            transform: rotate(40deg) translateY(410%);
-        }
-    }
+  #hamburger > span {
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: #242424;
+  }
 
-    @keyframes bottom-line {
-        from{
-            transform: rotate(0deg) translateY(0%);
-        }
-        to{
-            transform: rotate(-40deg) translateY(-410%);
-        }
-    }
+  #hamburger.active::before {
+    animation: top-line 0.4s ease-in-out forwards;
+  }
 
-    @keyframes mid-line {
-        from{
-            opacity: 1;
-        }
-        to{
-            opacity: 0;
-        }
-    }
+  #hamburger.active::after {
+    animation: bottom-line 0.4s ease-in-out forwards;
+  }
 
-    .nav-links{
-        flex-direction: column;
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 200px;
-        height: 100%;
-        background-color: #72D9E0;
-        opacity: .9;    
-        transform: translateX(100%);
-    }
+  #hamburger.active > span {
+    animation: mid-line 0.4s ease-in-out forwards;
+  }
 
-    .nav-link > a > span::before, .nav-link > a > span::after{
-        display: none;
+  @keyframes top-line {
+    from {
+      transform: rotate(0deg);
     }
-
-    @keyframes menu-slide-in {
-        from{
-            transform: translateX(100%);
-        }
-        to{
-            transform: translateX(0%);
-        }
+    to {
+      background-color: #ffffff;
+      transform: translateY(9px) rotate(135deg);
     }
+  }
 
-    @keyframes menu-slide-out {
-        from{
-            transform: translateX(0%);
-        }
-        to{
-            transform: translateX(100%);
-        }
+  @keyframes bottom-line {
+    from {
+      transform: rotate(0deg);
     }
-
-    .nav-link + .nav-link{ border: none; }
-    .nav-link{ 
-        padding: 0;
+    to {
+      background-color: #ffffff;
+      transform: translateY(-10px) rotate(-135deg);
     }
+  }
 
-    .nav-link:first-child{
-        margin-top: 10em;
+  @keyframes mid-line {
+    from {
+      opacity: 1;
     }
-
-    .nav-link > a{
-        width: 200px;
-        height: 50px;
-        display: flex;
+    to {
+      opacity: 0;
     }
+  }
 
-    .nav-link > a:active{
-        background-color: rgb(74, 194, 202);
+  .nav-links {
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 200px;
+    height: 100%;
+    background-color: #72d9e0;
+    opacity: 0.9;
+    transform: translateX(100%);
+  }
+
+  .nav-link > a > span::before,
+  .nav-link > a > span::after {
+    display: none;
+  }
+
+  @keyframes menu-slide-in {
+    from {
+      transform: translateX(100%);
     }
-
-    .nav-link > a > span{
-        margin: auto;
+    to {
+      transform: translateX(0%);
     }
+  }
 
+  @keyframes menu-slide-out {
+    from {
+      transform: translateX(0%);
+    }
+    to {
+      transform: translateX(100%);
+    }
+  }
+
+  .nav-link + .nav-link {
+    border: none;
+  }
+  .nav-link {
+    padding: 0;
+  }
+
+  .nav-link:first-child {
+    margin-top: 10em;
+  }
+
+  .nav-link > a {
+    width: 200px;
+    height: 50px;
+    display: flex;
+  }
+
+  .nav-link > a:active {
+    background-color: rgb(74, 194, 202);
+  }
+
+  .nav-link > a > span {
+    margin: auto;
+  }
 }
