--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ ul {
   list-style: none;
 }
 
+button {
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+}
+
 html,
 body {
   width: 100%;
@@ -37,7 +44,7 @@ body {
   background-color: var(--light-bg-color);
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 nav {
@@ -135,9 +142,78 @@ nav {
   border-left: 1px solid rgba(0, 0, 0, 0.2);
 }
 
+.social-icons {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
 #hamburger {
   display: none;
+  z-index: 3;
+}
+
+.intro {
+  display: flex;
+  margin: 3em 10em;
+  position: relative;
   z-index: 1;
+}
+
+.intro-title{
+  font-family: "Permanent Marker";
+  font-size: 2rem;
+  margin-bottom: .2em;
+  letter-spacing: 1px;
+  position: relative;
+}
+
+.intro-title::after{
+  content: '';
+  display: block;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  z-index: -1;
+  width: 32%;
+  height: 15px;
+  background-color: var(--light-primary-color);
+}
+
+.intro-text {
+  opacity: .8;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  align-self: center;
+  justify-self: center;
+  margin-bottom: 1em;
+}
+
+.btn {
+  background-color: var(--light-secondary-color);
+  padding: .7em 2.5em;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 50px;
+  border: 3px solid var(--dark-bg-color);
+}
+
+.bg-text {
+  font-size: 12vw;
+  position: absolute;
+  margin: 0;
+  bottom: -35px;
+  left: 50%;
+  white-space: nowrap;
+  transform: translateX(-50%);
+  user-select: none;
+  color: #E6EEF2;
+  text-shadow:
+   -1px -1px 0 #A7A7A7,  
+    1px -1px 0 #A7A7A7,
+    -1px 1px 0 #A7A7A7,
+     1px 1px 0 #A7A7A7;
 }
 
 @media only screen and (max-width: 768px) {
@@ -158,7 +234,6 @@ nav {
     height: 3px;
     background-color: #242424;
   }
-
 
   #hamburger > span {
     display: block;
@@ -217,6 +292,7 @@ nav {
     height: 100%;
     background-color: #72d9e0;
     opacity: 0.9;
+    z-index: 2;
     transform: translateX(100%);
   }
 
