--- a/style.css
+++ b/style.css
@@ -191,12 +191,47 @@ nav {
 }
 
 .btn {
-  background-color: var(--light-secondary-color);
-  padding: .7em 2.5em;
-  font-size: 1rem;
   font-weight: bold;
   border-radius: 50px;
-  border: 3px solid var(--dark-bg-color);
+  position: relative;
+}
+
+.btn-primary{
+  background-color: var(--light-secondary-color);
+  border: 2px solid var(--dark-bg-color);
+}
+
+.btn-cv{
+  width: 8em;
+  height: 2.7em;
+  font-size: 1rem;
+}
+
+.btn::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 50px;
+  z-index: -1;
+  top: 10%;
+  left: 2%;
+}
+
+.btn-primary::after{
+  border: 2px solid var(--dark-bg-color);
+  background-color: #55A7AC;
+}
+
+.btn:active {
+  top: 10%;
+  left: 2%;
+}
+
+.btn:active::after{
+  top: 0%;
+  left: 0%;
 }
 
 .bg-text {
