--- a/style.css
+++ b/style.css
@@ -144,10 +144,20 @@ nav {
 
 .social-icons {
   position: absolute;
+  height: 120px;
   top: 50%;
   right: 0;
+  margin-right: 1em;
   transform: translateY(-50%);
 }
+
+.social-icons > ul {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+}
+
 
 #hamburger {
   display: none;
