--- a/style.css
+++ b/style.css
@@ -216,6 +216,14 @@ nav {
   font-weight: bold;
   border-radius: 50px;
   position: relative;
+  display: block;
+}
+
+.btn > span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .btn-primary {
