--- a/style.css
+++ b/style.css
@@ -1,6 +1,34 @@
+/*
+
+  This Portfolio website is made by Yosra Skhiri 
+  mail: yosra.skhiri@gmail.com
+
+  ------------------------------------------------
+  Table of Content
+  1- Fonts
+  2- Variables
+  3- Reset styles
+  4- Layout 
+  5- Navigation 
+  6- Home page
+  7- about page
+  8- media queries
+    i- buttons
+    ii- home page
+    iii- about page
+
+*/
+
+/* 1-Fonts */
+
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap");
+
+/* /Fonts */
+
+/* 2-Variables */
+
 :root {
   --light-bg-color: #fcfcfc;
   --dark-bg-color: #242424;
@@ -14,6 +42,10 @@
   --light-secondary-color: #72d9e0;
   /*--dark-secondary-color: #72D9E0;*/
 }
+
+/* /Variables */
+
+/* 3-Reset styles */
 
 * {
   margin: 0;
@@ -37,6 +69,10 @@ button {
   cursor: pointer;
 }
 
+/* /Reset styles */
+
+/* 4-Layout */
+
 html,
 body {
   width: 100%;
@@ -53,6 +89,10 @@ body {
   padding: 0 2em;
   margin: 3em auto;
 }
+
+/* /Layout */
+
+/* 5-Navigation */
 
 nav {
   display: flex;
@@ -165,11 +205,23 @@ nav {
   justify-content: space-around;
 }
 
-
 #hamburger {
   display: none;
   z-index: 3;
 }
+
+.mode-icon {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  cursor: pointer;
+  margin: 2em;
+}
+
+/* /Navigation */
+
+/* 6-Home page */
 
 .intro {
   display: flex;
@@ -216,6 +268,18 @@ nav {
   justify-self: center;
   align-self: center;
 }
+
+.bg-text {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+}
+
+/* /Home page */
+
+/* Buttons */
 
 .btn {
   font-weight: bold;
@@ -269,22 +333,7 @@ nav {
   left: 0%;
 }
 
-.bg-text {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-}
-
-.mode-icon {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  cursor: pointer;
-  margin: 2em;
-}
+/* /Buttons */
 
 .about-section {
   display: flex;
@@ -306,6 +355,7 @@ nav {
   font-size: .9rem;
   font-weight: lighter;
 }
+
 
 @media only screen and (max-width: 768px) {
   #hamburger {
