--- a/style.css
+++ b/style.css
@@ -300,10 +300,21 @@ nav {
   border: 2px solid var(--dark-bg-color);
 }
 
+.btn-secondary {
+  background-color: var(--light-primary-color);
+  border: 2px solid var(--dark-bg-color);
+}
+
 .btn-cv {
   width: 8em;
   height: 2.7em;
   font-size: 1rem;
+}
+
+.btn-card {
+  width: 5em;
+  height: 2.1em;
+  margin-right: 1.2em;
 }
 
 .btn::after {
@@ -416,6 +427,49 @@ nav {
   transform: translate(-50%, -50%);
   width: 300px;
   opacity: 0.8;
+}
+
+.project-card {
+  width: 600px;
+  height: 200px;
+  border-radius: 25px;
+  background-color: rgba(243, 243, 243, .6);
+  display: flex;
+  position: relative;
+  z-index: 1;
+}
+
+.card-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 25px 0 0 25px;
+  flex: 1;
+}
+
+.card-content {
+  padding: 1em;
+}
+
+.card-date {
+  font-weight: lighter;
+  margin-bottom: .5em;
+  font-size: .8rem;
+}
+
+.card-title {
+  font-size: 1rem;
+  margin-bottom: .5em;
+}
+
+.card-text {
+  font-size: .9rem;
+  opacity: .9;
+  margin-bottom: .5em;
+}
+
+.buttons-card{
+  display: flex;
+
 }
 
 @media only screen and (max-width: 768px) {
