still working on the projects page

--- a/style.css
+++ b/style.css
@@ -312,9 +312,10 @@ nav {
 }
 
 .btn-card {
-  width: 5em;
-  height: 2.1em;
+  width: 4.8em;
+  height: 1.9em;
   margin-right: 1.2em;
+  font-size: .85rem;
 }
 
 .btn::after {
@@ -332,6 +333,11 @@ nav {
 .btn-primary::after {
   border: 2px solid var(--dark-bg-color);
   background-color: #55a7ac;
+}
+
+.btn-secondary::after {
+  border: 2px solid var(--dark-bg-color);
+  background-color: #acac06;
 }
 
 .btn:active {
@@ -408,6 +414,7 @@ nav {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .left-illu {
@@ -429,47 +436,57 @@ nav {
   opacity: 0.8;
 }
 
+.projects {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-column-gap: 10px;
+  grid-row-gap: 50px;
+}
+
 .project-card {
-  width: 600px;
-  height: 200px;
+  width: 500px;
+  height: 180px;
   border-radius: 25px;
-  background-color: rgba(243, 243, 243, .6);
+  background-color: rgba(255, 255, 255, 0.6);
   display: flex;
   position: relative;
-  z-index: 1;
+  z-index: 3;
 }
 
 .card-img {
-  width: 200px;
-  height: 200px;
+  width: 180px;
+  height: 180px;
   border-radius: 25px 0 0 25px;
   flex: 1;
 }
 
 .card-content {
-  padding: 1em;
+  padding: .6em;
 }
 
 .card-date {
   font-weight: lighter;
-  margin-bottom: .5em;
-  font-size: .8rem;
+  font-size: 0.7rem;
 }
 
 .card-title {
-  font-size: 1rem;
-  margin-bottom: .5em;
+  font-size: .9rem;
+  margin-bottom: 0.5em;
 }
 
 .card-text {
-  font-size: .9rem;
-  opacity: .9;
-  margin-bottom: .5em;
+  font-size: 0.8rem;
+  opacity: 0.9;
+  margin-bottom: 0.5em;
 }
 
-.buttons-card{
-  display: flex;
+.tech-icons {
+  margin-bottom: 0.2em;
+}
 
+.buttons-card {
+  display: flex;
 }
 
 @media only screen and (max-width: 768px) {
