added the scroll behavior to the y axis

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   background-color: var(--light-bg-color);
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .container {
