--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 
   This Portfolio website is made by Yosra Skhiri 
-  mail: yosra.skhiri@gmail.com
+  mail: yosra.skhiri.mail@gmail.com
 
   ------------------------------------------------
   ***Table of Content***
