--- a/style.css
+++ b/style.css
@@ -22,10 +22,67 @@
 
 /* 1-Fonts */
 
-@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap");
+@font-face {
+    font-family: 'roboto condensed';
+    src: url(fonts/roboto_condensed/robotocondensed-light-webfont.eot);
+    src: url(fonts/roboto_condensed/robotocondensed-light-webfont.eot?#iefix) format('embedded-opentype'),
+         url(fonts/roboto_condensed/robotocondensed-light-webfont.woff2) format('woff2'),
+         url(fonts/roboto_condensed/robotocondensed-light-webfont.woff) format('woff'),
+         url(fonts/roboto_condensed/robotocondensed-light-webfont.ttf) format('truetype'),
+         url(fonts/roboto_condensed/robotocondensed-light-webfont.svg#roboto_condensedlight) format('svg');
+    font-weight: 400;
+    font-style: normal;
+}
 
+@font-face {
+  font-family: 'roboto';
+  src: url(fonts/roboto/roboto-regular-webfont.eot);
+  src: url(fonts/roboto/roboto-regular-webfont.eot?#iefix) format('embedded-opentype'),
+       url(fonts/roboto/roboto-regular-webfont.woff2) format('woff2'),
+       url(fonts/roboto/roboto-regular-webfont.woff) format('woff'),
+       url(fonts/roboto/roboto-regular-webfont.ttf) format('truetype'),
+       url(fonts/roboto/roboto-regular-webfont.svg#robotoregular) format('svg');
+  font-weight: 400;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url(fonts/roboto/roboto-light-webfont.eot);
+  src: url(fonts/roboto/roboto-light-webfont.eot?#iefix) format('embedded-opentype'),
+       url(fonts/roboto/roboto-light-webfont.woff2) format('woff2'),
+       url(fonts/roboto/roboto-light-webfont.woff) format('woff'),
+       url(fonts/roboto/roboto-light-webfont.ttf) format('truetype'),
+       url(fonts/roboto/roboto-light-webfont.svg#robotolight) format('svg');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url(fonts/roboto/roboto-medium-webfont.eot);
+  src: url(fonts/roboto/roboto-medium-webfont.eot?#iefix) format('embedded-opentype'),
+       url(fonts/roboto/roboto-medium-webfont.woff2) format('woff2'),
+       url(fonts/roboto/roboto-medium-webfont.woff) format('woff'),
+       url(fonts/roboto/roboto-medium-webfont.ttf) format('truetype'),
+       url(fonts/roboto/roboto-medium-webfont.svg#robotomedium) format('svg');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'permanent marker';
+  src: url(fonts/permanent_marker/permanentmarker-regular-webfont.eot);
+  src: url(fonts/permanent_marker/permanentmarker-regular-webfont.eot?#iefix) format('embedded-opentype'),
+       url(fonts/permanent_marker/permanentmarker-regular-webfont.woff2) format('woff2'),
+       url(fonts/permanent_marker/permanentmarker-regular-webfont.woff) format('woff'),
+       url(fonts/permanent_marker/permanentmarker-regular-webfont.ttf) format('truetype'),
+       url(fonts/permanent_marker/permanentmarker-regular-webfont.svg#permanent_markerregular) format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
 /* /Fonts */
 
 /* 2-Variables */
