--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ body {
   width: 100%;
   height: 100vh;
   background-color: var(--light-bg-color);
+  color: var(--light-text-color);
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   position: relative;
   overflow-x: hidden;
@@ -317,10 +318,12 @@ nav {
 
 .logo > a > span:nth-child(1) {
   font-weight: 300;
+  color: var(--light-text-color);
 }
 
 .logo > a > span:nth-child(2) {
   font-weight: 500;
+  color: var(--light-text-color);
 }
 
 .logo::before {
@@ -350,6 +353,8 @@ nav {
   display: block;
   width: 4.4em;
   text-align: center;
+  color: var(--light-text-color);
+
 }
 
 .nav-link > a > span {
